new, delete options and improvements

--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^/(index\.php|assets/|humans\.txt)
-RewriteRule ^(.*)$ /ci-bus-admin/index.php?/$1 [L]
+RewriteRule ^(.*)$ /ci-bus-admin/backend/index.php?/$1 [L]
